[metadata]
name = cybersec-toolkit
version = 1.0.0
author = Nikhil Tomar
author_email = nikhiltomar2712@gmail.com
description = Security tools for ethical hacking and penetration testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikhiltomar2712/cybersec
project_urls =
    Bug Tracker = https://github.com/nikhiltomar2712/cybersec/issues
    Documentation = https://github.com/nikhiltomar2712/cybersec
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    dnspython>=2.4.2
    PyCryptodome>=3.18.0
    aiohttp>=3.9.0
    click>=8.1.0
    rich>=13.7.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.12.0
    flake8>=6.1.0
    isort>=5.13.0
    mypy>=1.7.0
    bandit>=1.7.0
